Leave Management System/force-app/main/default/objects/Leave__c/Leave__c.object-meta.xml
<CustomObject>
    <description>It contains the records of leaves the Users has taken.</description>
    <label>Leave</label>
    <nameField>
        <displayFormat>LVE-{0000}</displayFormat>
        <label>Leave Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leaves</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>