Leave Management System/force-app/main/default/objects/Leave__c/fields/Available_earned_leaves__c.field-meta.xml
<CustomField>
    <fullName>Available_earned_leaves__c</fullName>
    <description>Shows how many leaves are available</description>
    <formula>Booked_Earned_Leaves__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available earned leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>