Leave Management System/force-app/main/default/objects/Leave__c/fields/Available_sick_leaves__c.field-meta.xml
<CustomField>
    <fullName>Available_sick_leaves__c</fullName>
    <description>It shows how many avaiable sick leaves are there</description>
    <formula>Booked_sick_leaves__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available sick leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>