Leave Management System/force-app/main/default/objects/Leave__c/fields/Booked_Earned_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Booked_Earned_Leaves__c</fullName>
    <description>It stores how many earned leaves the user has booked.</description>
    <label>Booked Earned Leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>