Leave Management System/force-app/main/default/objects/Leave__c/fields/Booked_sick_leaves__c.field-meta.xml
<CustomField>
    <fullName>Booked_sick_leaves__c</fullName>
    <description>It stores how many sick leaves the users has booked.</description>
    <label>Booked sick leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>