Leave Management System/force-app/main/default/objects/Leave__c/fields/Booked_unpaid_leave__c.field-meta.xml
<CustomField>
    <fullName>Booked_unpaid_leave__c</fullName>
    <description>it shows how many unpaid leaves the user booked so far.</description>
    <label>Booked unpaid leave</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>