Leave Management System/force-app/main/default/objects/Leave__c/fields/Days_Taken__c.field-meta.xml
<CustomField>
    <fullName>Days_Taken__c</fullName>
    <formula>IF(
    OR(
        TEXT(Status__c) = &quot;Approved&quot;,
        TEXT(Status__c) = &quot;Active&quot;,
        TEXT(Status__c) = &quot;Inactive&quot;
    ),
    (
        5 * FLOOR( ( End_Date__c - DATE(1900, 1, 8) ) / 7 ) +
        MIN( 5, MOD( End_Date__c - DATE(1900, 1, 8), 7 ) )
    )
    -
    (
        5 * FLOOR( ( Start_Date__c - DATE(1900, 1, 8) ) / 7 ) +
        MIN( 5, MOD( Start_Date__c - DATE(1900, 1, 8), 7 ) )
    )
    +
    CASE(
        WEEKDAY(End_Date__c),
        2, 1,
        3, 1,
        4, 1,
        5, 1,
        6, 1,
        0
    ),
    
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>