Leave Management System/force-app/main/default/objects/Leave__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Indicated when the leave ends.</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>