Leave Management System/force-app/main/default/objects/Leave__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <description>What type of leave it is.</description>
    <label>Leave Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Earned_Leave</fullName>
                <label>Earned Leave</label>
            </value>
            <value>
                <fullName>Sick_Leave</fullName>
                <label>Sick Leave</label>
            </value>
            <value>
                <fullName>Unpaid_Leave</fullName>
                <label>Unpaid Leave</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>