Leave Management System/force-app/main/default/objects/Leave__c/fields/Reason_To_Leave__c.field-meta.xml
<CustomField>
    <fullName>Reason_To_Leave__c</fullName>
    <description>Descriptive text to explain reason to leave.</description>
    <label>Reason To Leave</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>