Leave Management System/force-app/main/default/objects/Leave__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Indicated when the leave is startes</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>