Leave Management System/force-app/main/default/objects/Leave__c/validationRules/EndDate_should_be_greater_than_start.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_should_be_greater_than_start</fullName>
    <active>true</active>
    <description>The End date of leave should be greater than start date.</description>
    <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>The end date should be larger than start date.</errorMessage>
</ValidationRule>