Leave Management System/force-app/main/default/objects/Leave__c/validationRules/New_record_then_status_should_be_pending.validationRule-meta.xml
<ValidationRule>
    <fullName>New_record_then_status_should_be_pending</fullName>
    <active>true</active>
    <description>New record should always have the status has pending.</description>
    <errorConditionFormula>ISNEW() &amp;&amp; TEXT(Status__c) &lt;&gt; &quot;Pending&quot;</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>New leave record&apos;s status must be pending first.</errorMessage>
</ValidationRule>