Leave Management System/force-app/main/default/objects/Leave__c/validationRules/Restrict_User_From_editing_approved_leav.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_User_From_editing_approved_leav</fullName>
    <active>true</active>
    <description>Restrict_User_From_editing_approved_leave record</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Approved&quot;),
    NOT($Profile.Name = &quot;System Administrator&quot;)
)</errorConditionFormula>
    <errorMessage>Approved leave is not editable, Contact Administrator.</errorMessage>
</ValidationRule>