Leave Management System/force-app/main/default/objects/Leave__c/validationRules/StartDate_should_be_greater_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDate_should_be_greater_than_today</fullName>
    <active>true</active>
    <description>It validated if the start date of leave is greater than Today or not.</description>
    <errorConditionFormula>ISNEW() &amp;&amp;
Start_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>The Start Date should be greater than today&apos;s date.</errorMessage>
</ValidationRule>